# macropad_firmware

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md
.github/workflows/: release.yml
src/: app_config.c  app_config.h  blink_request.c  blink_request.h  button.c  button.h  led_blink.c  led_blink.h  lwipopts.h  main.c  network.c  network.h  rest_client.c  rest_client.h  ui_assets.h
tmp_ui/: README.md  embed.mjs  index.html  minify.mjs  styles.css  wifi_setup.html
tmp_ui/api/: config
tmp_ui/api/wifi/: scan
